--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
     <title>2020 U.S. Presidential Election</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	  <link rel="stylesheet" type="text/css" href="static/CSS/style.css">
+	  <link rel="stylesheet" type="text/css" href="../static/CSS/style.css">
   </head>
 ​
   <body>
@@ -52,7 +52,7 @@
     <div class="jumbotron">
         <div class="container-fluid bg-1 text-center">
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
-          <p><img src="static/Images/banner.png" style="width:400px;" alt="2020 Presidential Election Banner"></p> 
+          <p><img src="../static/Images/banner.png" style="width:400px;" alt="2020 Presidential Election Banner"></p> 
           <p>Summary Text</p>
         </div>
       </div>
@@ -109,7 +109,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="static/barchart.js"></script>  
+  
 
 </body>
 ​
