--- a/templates/votepower.html
+++ b/templates/votepower.html
@@ -53,10 +53,10 @@
 
       
       <div class="container-fluid text-center">    
-        <h3>Timeline</h3><br>
+        <h3>Voting Power</h3><br>
         <div class="row">
             <div class="col-sm-12">
-            <p>Voting Power</p>
+            <p>Tipping Point Change vs Voter Power Index</p>
             <div id="scatter">
               <!-- We append our chart here. -->
             </div>
