scatter plot commit and link updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,24 +24,14 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
 
-                <!-- <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Plots</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="temp.html">Max Temperature</a>
-                        <a class="dropdown-item" href="humidity.html">Humidity</a>
-                        <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="wind.html">Wind Speed</a>
-                    </div>
-                </li> -->
-
                 <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Pop v Electoral</a>
+                    <a class="nav-link" href="/comparisons">Pop v Electoral</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="timeline.html">Timeline</a>
+                    <a class="nav-link" href="/timeline">Timeline</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="votepower.html">Voting Power</a>
+                    <a class="nav-link" href="/votepower">Voting Power</a>
                 </li>
             </ul>
         </div>
