--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -24,17 +24,15 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
 
-
-
                 <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Pop v Electoral</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="timeline.html">Timeline</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="votepower.html">Voting Power</a>
-                </li>
+                  <a class="nav-link" href="/comparisons">Pop v Electoral</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/timeline">Timeline</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/votepower">Voting Power</a>
+              </li>
             </ul>
         </div>
       </nav>
