--- a/templates/votepower.html
+++ b/templates/votepower.html
@@ -27,14 +27,14 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="comparisons.html">Pop v Electoral</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="timeline.html">Timeline</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="votepower.html">Voting Power</a>
-                </li>
+                  <a class="nav-link" href="/comparisons">Pop v Electoral</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/timeline">Timeline</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/votepower">Voting Power</a>
+              </li>
             </ul>
         </div>
       </nav>
@@ -78,7 +78,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="../static/scatter.js"></script>  
+  <script type="text/javascript" src="../static/js/scatter.js"></script>  
 
 </body>
 ​
