--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -43,13 +43,13 @@ body{
 	padding-top: 70px;
 	padding-bottom: 70px;
   }
-  
+/*   
 .bg-1{
     background-color:#ffffff;
     background-image: url("Images/pexels-aaron-schwartz-1093645.jpg");
   	background-size: cover;
     color: #06113C;
-  }
+  } */
 
 /* .jumbotron{
     background: url("/Images/pexels-aaron-schwartz-1093645.jpg") no-repeat center center; 
