--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/votepower">Voting Power</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/api/v1.0">APIs</a>
+              </li>
+
+                
             </ul>
         </div>
       </nav>
