added updated comparisons.html

--- a/templates/comparisons.html
+++ b/templates/comparisons.html
@@ -48,7 +48,7 @@
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
           <p><img src="../static/Images/banner.png" style="width:400px;" alt="2020 Presidential Election Banner"></p> 
           <p><h2>Popular vs Electoral Vote</h2></p>
-          <p>The framers of the Constitution established the Electoral College in the Constitution to forge a compromise between those who wanted the president to be elected by members of Congress - <strong></strong>electoral vote</strong>,  and those who wanted a president elected by a <strong>popular vote</strong>.</p>
+          <p>The framers of the Constitution established the Electoral College in the Constitution to forge a compromise between those who wanted the president to be elected by members of Congress - <strong>electoral vote</strong>,  and those who wanted a president elected by a <strong>popular vote</strong>.</p>
           <p>Today, 538 electors constitute the Electoral College. Each state is allocated electors equal to its number of representatives in the U.S. House of Representatives (currently a total of 435) plus its two senators (a total of 100). The District of Columbia is also allocated three electors. These numbers can change every 10 years, based on the results of the census. State laws differ on how electors are chosen. </p>
 
           <p>When Americans cast their votes for president, they are in reality directing other people — called electors — to vote for the candidate who receives the most votes in their state. The political party of the winning candidate in each state then sends its preselected electors to the state capital to vote. This is the Electoral College, and its members elect the president and vice president of the United States.</p>
