--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,6 @@
 ​
   <body>
     <!-- Navbar -->
-<<<<<<< Updated upstream
-	<div class="navigation">
-	  <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/">'Murica</a>
-=======
 
     <div class="navigation">
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
@@ -25,7 +20,7 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/"">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Charts</a>
@@ -47,44 +42,10 @@
 
 
 
-	<!-- <div class="navigation">
-	  <nav class="navbar fixed-top navbar-expand-md navbar-light justify-content-center">
-        <a class="navbar-brand" href="/"><img src="../static/images/USA.png" alt="USA Icon" style="width: 80px, height: 30px;"></a>
->>>>>>> Stashed changes
-        <button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-​
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Charts</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
-                      <a class="dropdown-item" href="/timeline">Timeline</a>
-                      <a class="dropdown-item" href="/votepower">Voting Power</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/api/v1.0">APIs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                
-            </ul>
-        </div>
-      </nav>
-    </div> -->
-    
-
     <div class="jumbotron">
         <div class="container-fluid bg-1 text-center">
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
-          <p><img src="../static/Images/banner.png" style="width:600px;" alt="2020 Presidential Election Banner"></p> 
+          <p><img src="../static/Images/banner.png" style="width:800px;" alt="2020 Presidential Election Banner"></p> 
         </div>
       </div>
 
@@ -93,17 +54,17 @@
         <h3>Election Trends</h3><br>
         <div class="row">
           <div class="col-sm-4">
-            <p>Popular V Electoral Vote</p>
+            <p><h4>Popular V Electoral Vote</h4></p>
             <a href="comparisons.html">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:75%" alt="Image"></a>
+                <img src="../static/images/Biden-Trump.jpg" class="img-responsive" style="width:75%" alt="Biden v Trump"></a>
           </div>
           <div class="col-sm-4"> 
-            <p>Timeline</p>
-            <a href="timeline.html"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:75%" alt="Image"></a>
+            <p><h4>Timeline</h4></p>
+            <a href="timeline.html"><img src="../static/images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
           </div>
           <div class="col-sm-4"> 
-            <p>Voting Power</p>
-            <a href="votepower.html"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:75%" alt="Image"></a>
+            <p><h4>Voting Power</h4></p>
+            <a href="votepower.html"><img src="../static/images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
           </div>
           
         </div>
@@ -115,13 +76,13 @@
         <h3>Twitter</h3><br>
         <div class="row">
             <div class="col-sm-6">
-            <p>Incumbent</p>
+            <p><h4>Incumbent</h4></p>
             
             <a class="twitter-timeline" data-width="400" data-height="600" data-theme="light" href="https://twitter.com/realDonaldTrump">Tweets by @realDonaldTrump</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           
           </div>
           <div class="col-sm-6"> 
-            <p>Challenger</p>
+            <p><h4>Challenger</h4></p>
             <a class="twitter-timeline" data-width="400" data-height="600" data-theme="light" href="https://twitter.com/JoeBiden">Tweets by @JoeBiden</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
                     
