--- a/templates/index.html
+++ b/templates/index.html
@@ -55,16 +55,16 @@
         <div class="row">
           <div class="col-sm-4">
             <p><h4>Popular V Electoral Vote</h4></p>
-            <a href="comparisons.html">
+            <a href="/comparisons">
                 <img src="../static/images/Biden-Trump.jpg" class="img-responsive" style="width:75%" alt="Biden v Trump"></a>
           </div>
           <div class="col-sm-4"> 
             <p><h4>Timeline</h4></p>
-            <a href="timeline.html"><img src="../static/images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
+            <a href="/timeline"><img src="../static/images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
           </div>
           <div class="col-sm-4"> 
             <p><h4>Voting Power</h4></p>
-            <a href="votepower.html"><img src="../static/images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
+            <a href="/votepower"><img src="../static/images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
           </div>
           
         </div>
