Update File Paths

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="navigation">
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <!-- Brand -->
-        <a class="navbar-brand" href="/"><img src="../static/images/USA.png" alt="USA Icon"></a>
+        <a class="navbar-brand" href="/"><img src="../static/Images/USA.png" alt="USA Icon"></a>
       
         <!-- Links -->
         <ul class="navbar-nav">
@@ -56,15 +56,15 @@
           <div class="col-sm-4">
             <p><h4>Popular V Electoral Vote</h4></p>
             <a href="/comparisons">
-                <img src="../static/images/Biden-Trump.jpg" class="img-responsive" style="width:75%" alt="Biden v Trump"></a>
+                <img src="../static/Images/Biden-Trump.jpg" class="img-responsive" style="width:75%" alt="Biden v Trump"></a>
           </div>
           <div class="col-sm-4"> 
             <p><h4>Timeline</h4></p>
-            <a href="/timeline"><img src="../static/images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
+            <a href="/timeline"><img src="../static/Images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
           </div>
           <div class="col-sm-4"> 
             <p><h4>Voting Power</h4></p>
-            <a href="/votepower"><img src="../static/images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
+            <a href="/votepower"><img src="../static/Images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
           </div>
           
         </div>
