--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/"">Home</a>
+              <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Charts</a>
