--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -10,44 +10,41 @@
   </head>
 ​
   <body>
-    <!-- Navbar -->
-	<div class="navigation">
-	  <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/">'Murica</a>
-        <button class="navbar-toggler border" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-​
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
+   <!-- Navbar -->
 
-                <li class="nav-item">
-                  <a class="nav-link" href="/comparisons">Pop v Electoral</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/timeline">Timeline</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/votepower">Voting Power</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="/api/v1.0">APIs</a>
-            </li>
-
-            </ul>
-        </div>
-      </nav>
-    </div>
+   <div class="navigation">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+      <!-- Brand -->
+      <a class="navbar-brand" href="/"><img src="../static/Images/USA.png" alt="USA Icon"></a>
+    
+      <!-- Links -->
+      <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">Charts</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
+              <a class="dropdown-item" href="/timeline">Timeline</a>
+              <a class="dropdown-item" href="/votepower">Voting Power</a>
+          </div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/api/v1.0">APIs</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
     
 
     <div class="jumbotron">
         <div class="container-fluid bg-1 text-center">
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
-          <p><img src="../static/Images/banner.png" style="width:400px;" alt="2020 Presidential Election Banner"></p> 
+          <p><img src="../static/Images/banner.png" style="width:800px;" alt="2020 Presidential Election Banner"></p> 
         </div>
       </div>
 
