--- a/templates/votepower.html
+++ b/templates/votepower.html
@@ -46,11 +46,8 @@
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
           <p><img src="../static/Images/banner.png" style="width:800px;" alt="2020 Presidential Election Banner"></p> 
           <p><h2>Voting Power</h2></p>
-          <p><strong>Voter Power Index (VPI)</strong> is  “the relative likelihood that an individual voter in a state will determine the Electoral College winner”, based on their election models.  The ability of a voter to change the outcome of the election is, after all, the bottom line when people think about a vote mattering.</p>
-            <p><strong>Tipping Point Chance (TPC)</strong> is  the chance the state will deliver the decisive vote in the Electoral College.</p>
+          <p>Two measures help capture how important a state and its voters will be in determining the next president: <strong>Voter Power Index (VPI)</strong> is  the relative likelihood that an individual voter in a state will determine the Electoral College winner, based on their election models.  The ability of a voter to change the outcome of the election is, after all, the bottom line when people think about a vote mattering. <strong>Tipping Point Chance (TPC)</strong> is  the probability the state will deliver the decisive vote in the Electoral College.</p>
 
-            <p>How much each state matters</p>
-              <p>Two measures help capture how important a state and its voters will be in determining the next president: “Tipping-point chance” is the probability that a state will provide the decisive vote in the Electoral College. “Voter power index” is the relative likelihood that an individual voter in a state will determine the Electoral College winner.</p>
         </div>
       </div>
 
@@ -64,7 +61,8 @@
             <p><h3>Tipping Point Chance vs Voter Power Index</h3></p>
 
             <div id="scatter">
-              <!-- We append our chart here. -->
+              <!-- chart here -->
+
               <br><br><br><br>
             
 
