Add Resources section

--- a/templates/about.html
+++ b/templates/about.html
@@ -44,7 +44,6 @@
 
     <div class="jumbotron">
         <div class="container-fluid bg-1 text-center">
-          <!-- <h1>2020 U.S. Presidential Election</h1>      -->
           <p><img src="../static/Images/banner.png" style="width:800px;" alt="2020 Presidential Election Banner"></p> 
         </div>
       </div>
@@ -54,18 +53,34 @@
         <div class="row">
     <div class="col-sm-12">
     <p><h3>About Project 2</h3></p>
-<p>Git Hub Repository: <a href="https://github.com/ejkaster/Project2-2020-US-Presidential-Election/" target="_blank">https://github.com/ejkaster/Project2-2020-US-Presidential-Election/</a></p>
-<p>Team Members: <a href="https://github.com/DNorris47" target="_blank">DeAndrea Norris</a> | <a href="https://github.com/ejkaster/" target="_blank">Beth Kaster</a> | <a href="https://github.com/martinezmaria" target="_blank">Maria Martinez</a> </p>
-<p>Data Sources: 
+<p><strong>Git Hub Repository</strong> 
+  <br><a href="https://github.com/ejkaster/Project2-2020-US-Presidential-Election/" target="_blank">https://github.com/ejkaster/Project2-2020-US-Presidential-Election/</a></p>
+
+  <p><strong>Team Members</strong> 
+    <br><a href="https://github.com/DNorris47" target="_blank">DeAndrea Norris</a>
+    <br><a href="https://github.com/martinezmaria" target="_blank">Maria Martinez</a> 
+    <br><a href="https://github.com/ejkaster/" target="_blank">Beth Kaster</a>
+    </p>
+
+
+<p><strong>Data Sources</strong>
 <br><a href="https://projects.fivethirtyeight.com/2020-general-data/presidential_national_toplines_2020.csv" target="_blank">https://projects.fivethirtyeight.com/2020-general-data/presidential_national_toplines_2020.csv</a>
 <br><a href="https://projects.fivethirtyeight.com/2020-general-data/presidential_state_toplines_2020.csv" target="_blank">https://projects.fivethirtyeight.com/2020-general-data/presidential_state_toplines_2020.csv</a>
 <br><a href="https://projects.fivethirtyeight.com/2020-general-data/presidential_ev_probabilities_2020.csv" target="_blank">https://projects.fivethirtyeight.com/2020-general-data/presidential_ev_probabilities_2020.csv</a>
 <br><a href="https://projects.fivethirtyeight.com/2020-general-data/economic_index.csv" target="_blank">https://projects.fivethirtyeight.com/2020-general-data/economic_index.csv</a>
 </p>
 
-<p>APIs:
+<p><strong>APIs</strong>
   <br>Information by State: <a href="/api/v1.0/states" target="_blank">/api/v1.0/states</a>
   <br>Information by Date: <a href="/api/v1.0/national" target="_blank">/api/v1.0/national</a>
+</p>
+
+<p><strong>Resources</strong>
+  <br><a href="https://www.vote.org/polling-place-locator/" target="_blank">Polling Place Locator</a>
+  <br><a href="https://www.usa.gov/absentee-voting" target="_blank">Absentee and Early Voting</a>
+  <br><a href="https://www.rockthevote.org/how-to-vote/nationwide-voting-info/covid-19-voting-information/" target="_blank">Voting and COVID-19</a>
+  <br><a href="https://www.vote411.org/check-registration" target="_blank">Check Voter Registration Status</a>
+
 </p>
 
 <br><br>
