add source link

--- a/templates/comparisons.html
+++ b/templates/comparisons.html
@@ -50,6 +50,8 @@
           <p>Today, 538 electors constitute the Electoral College. Each state is allocated electors equal to its number of representatives in the U.S. House of Representatives (currently a total of 435) plus its two senators (a total of 100). The District of Columbia is also allocated three electors. These numbers can change every 10 years, based on the results of the census. State laws differ on how electors are chosen. </p>
 
           <p>When Americans cast their votes for president, they are in reality directing other people — called electors — to vote for the candidate who receives the most votes in their state. The political party of the winning candidate in each state then sends its preselected electors to the state capital to vote. This is the Electoral College, and its members elect the president and vice president of the United States.</p>
+
+          <p><i>Source: <a href="https://www.livingfacts.org/en/articles/2020/electoral-college" target="_blank">https://www.livingfacts.org/en/articles/2020/electoral-college</a></i></p>
               
        
         </div>
