--- a/templates/about.html
+++ b/templates/about.html
@@ -56,7 +56,7 @@
 <p><strong>Git Hub Repository</strong> 
   <br><a href="https://github.com/ejkaster/Project2-2020-US-Presidential-Election/" target="_blank">https://github.com/ejkaster/Project2-2020-US-Presidential-Election/</a></p>
 
-  <p><strong>Team Members</strong> 
+  <p><strong>Team 12 Members</strong> 
     <br><a href="https://github.com/DNorris47" target="_blank">DeAndrea Norris</a>
     <br><a href="https://github.com/martinezmaria" target="_blank">Maria Martinez</a> 
     <br><a href="https://github.com/ejkaster/" target="_blank">Beth Kaster</a>
