--- a/templates/about.html
+++ b/templates/about.html
@@ -76,6 +76,7 @@
 </p>
 
 <p><strong>Resources</strong>
+  <br><a href="https://www.isidewith.com/elections/2020-presidential-quiz" target="_blank">Who Do You Side With?</a>
   <br><a href="https://www.vote.org/polling-place-locator/" target="_blank">Polling Place Locator</a>
   <br><a href="https://www.usa.gov/absentee-voting" target="_blank">Absentee and Early Voting</a>
   <br><a href="https://www.rockthevote.org/how-to-vote/nationwide-voting-info/covid-19-voting-information/" target="_blank">Voting and COVID-19</a>
