--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
     <title>2020 U.S. Presidential Election</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	  <link rel="stylesheet" type="text/css" href="../static/CSS/style.css">
+	  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
 ​
   <body>
@@ -29,9 +29,6 @@
                 <a class="dropdown-item" href="/timeline">Timeline</a>
                 <a class="dropdown-item" href="/votepower">Voting Power</a>
             </div>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="/api/v1.0">APIs</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
