updated routes, how we fetch data, create new api

--- a/templates/about.html
+++ b/templates/about.html
@@ -68,8 +68,9 @@
 </p>
 
 <p><strong>APIs</strong>
-  <br>Information by State: <a href="/api/v1.0/states" target="_blank">/api/v1.0/states</a>
-  <br>Information by Date: <a href="/api/v1.0/national" target="_blank">/api/v1.0/national</a>
+  <br><a href="/api/v1.0/states" target="_blank">/api/v1.0/states</a>
+  <br><a href="/api/v1.0/national" target="_blank">/api/v1.0/national</a>
+  <br><a href="/api/v1.0/national" target="_blank">/api/v1.0/popular</a>
 </p>
 
 <p><strong>Resources</strong>
