--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
 <p><strong>APIs</strong>
   <br><a href="/api/v1.0/states" target="_blank">/api/v1.0/states</a>
   <br><a href="/api/v1.0/national" target="_blank">/api/v1.0/national</a>
-  <br><a href="/api/v1.0/national" target="_blank">/api/v1.0/popular</a>
+  <br><a href="/api/v1.0/popular" target="_blank">/api/v1.0/popular</a>
 </p>
 
 <p><strong>Resources</strong>
